Added the ingredient list to the ramen recipe.

--- a/recipes/ramen.html
+++ b/recipes/ramen.html
@@ -15,6 +15,33 @@
 
     <p><i>This ramen is unlike anything you've heated up in your college days. No, this ramen will absolutely blow you away.</i></p> 
     <p><i>Prepared with marinaded pork and a delicous broth mix, garnished with a half boiled egg and chives, <strong>this ramen recipe will have you salivating at the mere thought of it for years to come.</strong></i></p>
-
+        <br>
+    <h2>Ingredients</h2>
+    <ul>
+        <p><strong>Pork</strong></p>
+        <li>2lbs Marinaded Pork (you can buy this pre-prepared or marinade the pork yourself</li>
+            <br>
+        <p><strong>Spice Mix (If you use pork loin without a marinade)</strong></p>
+        <li>4 cloves garlic, minced</li>
+        <li>1 tsp Salt</li>
+        <li>1 tbsp freshly cracked black pepper</li>
+            <br>
+        <p><strong>Broth & Ramen Noodles</strong></p>
+        <li>2 Packets of Dried Ramen Noodles (Do not include spice packet)</li>
+        <li>4 cups of beef or chicken broth</li>
+        <li>1-2 slices of ginger</li>
+        <li>2-3 garlic cloves</li>
+        <li>2 green onions <b>chopped into large sections</b></li>
+        <li>1/2 tbsp chili flakes/crushed red pepper</li>
+        <li>1 1/2 tsp black peppercorns</li>
+        <li>1-2 tbsp soy sauce</li>
+        <li>4oz shiitake mushrooms, sliced (or 10 dried shiitake mushrooms, soaked in warm water and sliced)</li>
+        <li>2-4 stalks of Chinese greens like baby bok choy</li>
+        <li>Enoki mushrooms (optional)</li>
+        <li>Extra green onions to garnish</li>
+            <br>
+        <p><strong>Half Boiled Eggs</strong></p>
+        <li>2 eggs</li>
+    </ul>
 </body>
 </html>
