Added the steps to make the ramen and adjusted line spacing.

--- a/recipes/ramen.html
+++ b/recipes/ramen.html
@@ -15,17 +15,17 @@
 
     <p><i>This ramen is unlike anything you've heated up in your college days. No, this ramen will absolutely blow you away.</i></p> 
     <p><i>Prepared with marinaded pork and a delicous broth mix, garnished with a half boiled egg and chives, <strong>this ramen recipe will have you salivating at the mere thought of it for years to come.</strong></i></p>
-        <br>
+    <br>
     <h2>Ingredients</h2>
     <ul>
         <p><strong>Pork</strong></p>
         <li>2lbs Marinaded Pork (you can buy this pre-prepared or marinade the pork yourself</li>
-            <br>
+
         <p><strong>Spice Mix (If you use pork loin without a marinade)</strong></p>
         <li>4 cloves garlic, minced</li>
         <li>1 tsp Salt</li>
         <li>1 tbsp freshly cracked black pepper</li>
-            <br>
+
         <p><strong>Broth & Ramen Noodles</strong></p>
         <li>2 Packets of Dried Ramen Noodles (Do not include spice packet)</li>
         <li>4 cups of beef or chicken broth</li>
@@ -39,9 +39,40 @@
         <li>2-4 stalks of Chinese greens like baby bok choy</li>
         <li>Enoki mushrooms (optional)</li>
         <li>Extra green onions to garnish</li>
-            <br>
+
         <p><strong>Half Boiled Eggs</strong></p>
         <li>2 eggs</li>
     </ul>
+    <br>
+    <h2>Steps</h2>
+    <ol>
+        <p><strong>Pork</strong></p>
+        <li>If you don't have access to pre-marinaded pork, you can marinade it yourself. 
+            Sprinkle the pork loin with salt and pepper generously. Mix the minced garlic with 3 tbsp oil to form a paste and rub it all over the pork tenderloin. Cover and marinade for at least 1 hour - overnight (in the fridge)</li>
+        <li>Preheat oven to 350°F / 180°C.</li>
+        <li>When the oven is preheated, roast the pork tenderloin according to package instructions. (I cooked until the internal temperature registered at 160°F with a meat thermometer - which took about 30 minutes for the 1.8 lb piece of tenderloin).</li>
+        <li>Once it’s cooked, remove from the oven, cover and let it rest for about 10 minutes before slicing.</li>
+    </ol>  
+    <ol> 
+        <p><strong>Eggs</strong></p>
+        <li>Bring a pot of water to a boil (with enough water to completely cover the eggs).</li>
+        <li>Add some salt or vinegar to the water. Lower the eggs into the water gently. To prevent the eggs from cracking, remove the pan from the heat, and lower the eggs when there is no bubbling. Once the eggs are in the pot, return it back to the stove.</li>
+        <li>Reduce the heat to a simmer, and let the eggs cook for exactly 6 minutes (set a timer).</li>
+        <li>When the 6 minutes are up, remove the eggs and place them in a bowl with iced water OR under cold running water for a few minutes.</li>
+        <li>Crack and remove the egg shell carefully. Keep the eggs covered until you are ready to serve.</li>
+    </ol> 
+    <ol>
+        <p><strong>Ramen Noodles</strong></p>
+            <li>Place all the ingredients except for the ramen noodles, mushrooms, Asian greens and chopped spring onions, in a pot.</li>
+            <li>Bring the stock to a boil over medium high heat. Cover and let it simmer on medium - medium low heat for about 15 - 20 minutes.</li>
+            <li>Once the pork is cooked and ready to be sliced, you can remove the garlic cloves, ginger and spring onions from the broth if you want (we like to eat it all). Add the greens and blanch quickly for 1-2 minutes in the simmering water. Remove the greens and set aside.</li>
+            <li>Add the ramen noodles, and sliced shiitake mushrooms and let it simmer for 3 - 5 minutes until the noodles are done.</li>         
+    </ol>
+    <ol>
+        <p><strong>Assembly</strong></p>
+            <li>Slice the pork tenderloin into thin slices.</li>
+            <li>Divide the ramen noodles and broth into two bowls.</li>
+            <li>Add the enoki mushrooms and blanched greens over the hot broth, followed by the pork slices, soft boiled egg, cut in half and the chopped spring onions. Enjoy!</li>
+    </ol>
 </body>
 </html>
