Added Gordon Ramsay to index.html

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
+
+    <img src="img/gordon.gif" alt="gordon ramsay gif saying no">
+
     <ul>
         <li><a href="recipes/ramen.html">Some Tasty Ramen</a></li>
     </ul>
