Added ingredients and steps to breakfastburrito.html

--- a/recipes/breakfastburrito.html
+++ b/recipes/breakfastburrito.html
@@ -15,5 +15,40 @@
     <p><em>Breakfast is the most important meal of the day. Sometimes when you're in a rush in the morning, you don't have time to make anythying.</em></p>
     <p><em>The solution? Meal prep breakfast burritos for the whole week so you can just heat one up in the microwave in the morning and a quick but filling (and delicious) breakfast.</em></p>
     <p><em>You can meal prep your breakfast for the entire week with this simple yet scrumptions breakfast burrito recipe, <strong>all prepared in under 30 minutes!</strong> Let's get started.</em></p>
+    <br>
+    <h2>Ingredients</h2>
+    <ul>
+        <li>2tbsp butter</li>
+        <li>1 yellow onion</li>
+        <li>4oz spinach leaves</li>
+        <li>4oz sliced mushrooms</li>
+        <li>12 large eggs</li>
+        <li>1lb spicy breakfast sausage</li>
+        <li>8 large tortillas (burrito size)</li>
+        <li>Shredded pepperjack cheese (or your favorite shredded cheese of choice)</li>
+    </ul>
+    <br>
+    <h2>Steps</h2>
+    <ol>
+        <li>Dice the yellow onion while heating up a large skillet with 1tbsp of butter.</li>
+        <li>Add the diced yellow onion, mushrooms, and spinach leaves to the large skillet and saute over medium heat for about 5 minutes.</li>
+        <li>In another large skillet, cook the spicy breakfast sausage over medium heat until it is browned (about 5-7 minutes)</li>
+        <li>While the meat is cooking, crack the 12 eggs into a bowl and lightly whisk. Add the whisked eggs to your initial large skillet with the onions, spinach, and mushrooms until the eggs are cooked. DO NOT overcook the eggs or they'll become dry. Season with salt and pepper to taste.</li>
+        <li>To assemble the burritos, add a scoop of the eggs and vegetables to the center of the tortillas then top with a scoop of sausage and a handful of cheese.</li>
+        <li>Roll the burrito as demonstrated below: 
+            <br>
+            <img src="../img/rollburrito.gif" alt="how to roll a burrito">
+            <br>
+        </li>
+        <li>To finish the meal prep, roll each burrito in tin foil or parchment paper and place in freezer bags to be stored in your freezer.</li>
+        <p><em><b>Pro Tip:</b> Move a burrito from the freezer to the fridge the night before you reheat it so it can thaw overnight.</em></p>
+    </ol>
+    <h3>Reheat Instructions</h3>
+    <ul>
+        <li><strong>From Refridgerated: </strong>Microwave on high for 1 minute, then heat in a skillet on medium-low for about 5 minutes on each side until the tortilla is crispy. Add hot sauce if you'd like.</li>
+        <li><strong>From Frozen: </strong>Microwave on defrost setting for about 5 minutes, then microwave on high for 1 minute, then heat in a skillet as described above.</li>
+    </ul>
+    <p><strong>Enjoy!</strong></p>
+
 </body>
 </html>
