Cleaned up home page formatting and creating nav structure between pages

--- a/index.html
+++ b/index.html
@@ -12,8 +12,13 @@
 
     <img src="img/gordon.gif" alt="gordon ramsay gif saying no">
 
+    <h2>Enjoy Some of my Favorite Recipes</h2>
+    <p>Approved by Gordon Ramsay himself:</p>
+    
     <ul>
         <li><a href="recipes/ramen.html">Some Tasty Ramen</a></li>
+        <li><a href="recipes/breakfastburrito.html">Budget-Friendly Breakfast Burritos</a></li>
+        <li><a href="recipes/quesadilla.html">Sheet Pan Quesadilla with Jalapeno Ranch</a></li>
     </ul>
 </body>
 </html>
