--- a/recipes/breakfastburrito.html
+++ b/recipes/breakfastburrito.html
@@ -9,6 +9,11 @@
 <body>
     <h1>Budget-Friendly Breakfast Burritos</h1>
 
+    <a href="../index.html">Home</a>&emsp;
+    <a href="ramen.html"> Some Tasty Ramen </a>&emsp;
+    <a href="quesadilla.html"> Sheet Pan Quesadilla </a>&emsp;
+
+    <br><br>
     <img src="../img/burrito.jpg" alt="breakfast burrito meal prep">
     
     <h2>Description</h2>
