--- a/recipes/quesadilla.html
+++ b/recipes/quesadilla.html
@@ -9,6 +9,12 @@
 <body>
     <h1>Sheet Pan Quesadilla with Jalapeno Ranch</h1>
 
+    <a href="../index.html">Home</a>&emsp;
+    <a href="ramen.html"> Some Tasty Ramen </a>&emsp;
+    <a href="breakfastburrito.html"> Breakfast Burritos </a>&emsp;
+
+    <br><br>
+
     <img src="../img/quesadilla.jpg" alt="sheet pan quesadilla">
 
     <h2>Description</h2>
