--- a/recipes/ramen.html
+++ b/recipes/ramen.html
@@ -9,6 +9,12 @@
 <body>
     <h1>Some Tasty Ramen</h1>
 
+    <a href="../index.html">Home</a>&emsp;
+    <a href="breakfastburrito.html"> Breakfast Burritos </a>&emsp;
+    <a href="quesadilla.html"> Sheet Pan Quesadilla </a>&emsp;
+
+    <br><br>
+
     <img src="../img/ramenbowl.jpeg" alt="Delicious and easy ramen bowl recipe">
 
     <h2>Description</h2>
@@ -47,19 +53,19 @@
     <h2>Steps</h2>
     <ol>
         <p><strong>Pork</strong></p>
-        <li>If you don't have access to pre-marinaded pork, you can marinade it yourself. 
+            <li>If you don't have access to pre-marinaded pork, you can marinade it yourself. 
             Sprinkle the pork loin with salt and pepper generously. Mix the minced garlic with 3 tbsp oil to form a paste and rub it all over the pork tenderloin. Cover and marinade for at least 1 hour - overnight (in the fridge)</li>
-        <li>Preheat oven to 350°F / 180°C.</li>
-        <li>When the oven is preheated, roast the pork tenderloin according to package instructions. (I cooked until the internal temperature registered at 160°F with a meat thermometer - which took about 30 minutes for the 1.8 lb piece of tenderloin).</li>
-        <li>Once it’s cooked, remove from the oven, cover and let it rest for about 10 minutes before slicing.</li>
+            <li>Preheat oven to 350°F / 180°C.</li>
+            <li>When the oven is preheated, roast the pork tenderloin according to package instructions. (I cooked until the internal temperature registered at 160°F with a meat thermometer - which took about 30 minutes for the 1.8 lb piece of tenderloin).</li>
+            <li>Once it’s cooked, remove from the oven, cover and let it rest for about 10 minutes before slicing.</li>
     </ol>  
     <ol> 
         <p><strong>Eggs</strong></p>
-        <li>Bring a pot of water to a boil (with enough water to completely cover the eggs).</li>
-        <li>Add some salt or vinegar to the water. Lower the eggs into the water gently. To prevent the eggs from cracking, remove the pan from the heat, and lower the eggs when there is no bubbling. Once the eggs are in the pot, return it back to the stove.</li>
-        <li>Reduce the heat to a simmer, and let the eggs cook for exactly 6 minutes (set a timer).</li>
-        <li>When the 6 minutes are up, remove the eggs and place them in a bowl with iced water OR under cold running water for a few minutes.</li>
-        <li>Crack and remove the egg shell carefully. Keep the eggs covered until you are ready to serve.</li>
+            <li>Bring a pot of water to a boil (with enough water to completely cover the eggs).</li>
+            <li>Add some salt or vinegar to the water. Lower the eggs into the water gently. To prevent the eggs from cracking, remove the pan from the heat, and lower the eggs when there is no bubbling. Once the eggs are in the pot, return it back to the stove.</li>
+            <li>Reduce the heat to a simmer, and let the eggs cook for exactly 6 minutes (set a timer).</li>
+            <li>When the 6 minutes are up, remove the eggs and place them in a bowl with iced water OR under cold running water for a few minutes.</li>
+            <li>Crack and remove the egg shell carefully. Keep the eggs covered until you are ready to serve.</li>
     </ol> 
     <ol>
         <p><strong>Ramen Noodles</strong></p>
