--- a/recipes/breakfastburrito.html
+++ b/recipes/breakfastburrito.html
@@ -4,19 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../style.css">
     <title>Budget-Friendly Breakfast Burritos</title>
 </head>
 <body>
     <h1>Budget-Friendly Breakfast Burritos</h1>
 
-    <a href="../index.html">Home</a>&emsp;
-    <a href="ramen.html"> Some Tasty Ramen </a>&emsp;
-    <a href="quesadilla.html"> Sheet Pan Quesadilla </a>&emsp;
+    <button onclick="location.href='../index.html'" class="button recipe">Home</button>
+    <button onclick="location.href='ramen.html'" class="button recipe">Some Tasty Ramen</button>
+    <button onclick="location.href='quesadilla.html'" class="button recipe">Sheet Pan Quesadilla with Jalapeno Ranch</button>
 
-    <br><br>
+    <br><a href="#start"><img src="../img/Circle_arrow_down_font_awesome.svg" alt="arrow down" class="lets-cook"></a><br>
+    
     <img src="../img/burrito.jpg" alt="breakfast burrito meal prep">
     
-    <h2>Description</h2>
+    <h2><a name="start">Description</a></h2>
     <p><em>Breakfast is the most important meal of the day. Sometimes when you're in a rush in the morning, you don't have time to make anythying.</em></p>
     <p><em>The solution? Meal prep breakfast burritos for the whole week so you can just heat one up in the microwave in the morning and a quick but filling (and delicious) breakfast.</em></p>
     <p><em>You can meal prep your breakfast for the entire week with this simple yet scrumptions breakfast burrito recipe, <strong>all prepared in under 30 minutes!</strong> Let's get started.</em></p>
@@ -55,5 +57,8 @@
     </ul>
     <p><strong>Enjoy!</strong></p>
 
+    <br><br>
+
+    <button onclick="location.href='breakfastburrito.html'" class="button recipe">Go To Top</button>
 </body>
 </html>
