--- a/recipes/quesadilla.html
+++ b/recipes/quesadilla.html
@@ -4,20 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../style.css">
     <title>Sheet Pan Quesadilla with Jalapeno Ranch</title>
 </head>
 <body>
     <h1>Sheet Pan Quesadilla with Jalapeno Ranch</h1>
 
-    <a href="../index.html">Home</a>&emsp;
-    <a href="ramen.html"> Some Tasty Ramen </a>&emsp;
-    <a href="breakfastburrito.html"> Breakfast Burritos </a>&emsp;
+    <button onclick="location.href='../index.html'" class="button recipe">Home</button>
+    <button onclick="location.href='ramen.html'" class="button recipe">Some Tasty Ramen</button>
+    <button onclick="location.href='breakfastburrito.html'" class="button recipe">Budget-Friendly Breakfast Burritos</button>
 
-    <br><br>
+    <br><a href="#start"><img src="../img/Circle_arrow_down_font_awesome.svg" alt="arrow down" class="lets-cook"></a><br>
 
     <img src="../img/quesadilla.jpg" alt="sheet pan quesadilla">
 
-    <h2>Description</h2>
+    <h2><a name="start">Description</a></h2>
     <p><em>This sheet pan quesadilla recipe is perfect for parties or gameday and even comes with a delicious jalapeno ranch side to dip it in. This recipe can be modified to your liking by adding meat or toppings such as salsa or guacamole to take it to another level.</em></p>
 
     <h2>Ingredients</h2>
@@ -48,6 +49,10 @@
         <li>While quesadilla is cooking make the jalapeño ranch by blending all ingredients together using either an immersion blender, blender or food processor.</li>
         <li>Cut quesadilla into large squares and serve dipped into jalapeño ranch. Enjoy!</li>
     </ol>
+
+    <br><br>  
+    
+    <button onclick="location.href='quesadilla.html'" class="button recipe">Go To Top</button>
 
 </body>
 </html>
