--- a/recipes/ramen.html
+++ b/recipes/ramen.html
@@ -4,20 +4,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../style.css">
     <title>Delicious Ramen Recipe</title>
 </head>
 <body>
     <h1>Some Tasty Ramen</h1>
 
-    <a href="../index.html">Home</a>&emsp;
-    <a href="breakfastburrito.html"> Breakfast Burritos </a>&emsp;
-    <a href="quesadilla.html"> Sheet Pan Quesadilla </a>&emsp;
+    <button onclick="location.href='../index.html'" class="button recipe">Home</button>
+    <button onclick="location.href='breakfastburrito.html'" class="button recipe">Budget-Friendly Breakfast Burritos</button>
+    <button onclick="location.href='quesadilla.html'" class="button recipe">Sheet Pan Quesadilla with Jalapeno Ranch</button>
 
-    <br><br>
+    <br>
+
+    <a href="#start"><img src="../img/Circle_arrow_down_font_awesome.svg" alt="arrow down" class="lets-cook"></a>
+
+    <br>
 
     <img src="../img/ramenbowl.jpeg" alt="Delicious and easy ramen bowl recipe">
 
-    <h2>Description</h2>
+    <h2><a name="start">Description</a></h2>
 
     <p><i>This ramen is unlike anything you've heated up in your college days. No, this ramen will absolutely blow you away.</i></p> 
     <p><i>Prepared with marinaded pork and a delicous broth mix, garnished with a half boiled egg and chives, <strong>this ramen recipe will have you salivating at the mere thought of it for years to come.</strong></i></p>
@@ -80,5 +85,9 @@
             <li>Divide the ramen noodles and broth into two bowls.</li>
             <li>Add the enoki mushrooms and blanched greens over the hot broth, followed by the pork slices, soft boiled egg, cut in half and the chopped spring onions. Enjoy!</li>
     </ol>
+
+    <br><br>
+
+    <button onclick="location.href='ramen.html'" class="button recipe">Go To Top</button>
 </body>
 </html>
